# hamma

./: .antigravity.md  .gitignore  .metadata  .replit  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  GEMINI.md  LOCAL_AI.md  README.md  ROADMAP.md  SECURITY.md  analysis_options.yaml  audit.md  build_android_log.txt  pubspec.yaml  replit.md  replit.nix  run.sh  test_sftp.dart  threat_model.md
.jules/: sentinel.md
android/: settings.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  llama_ffi_bridge.cpp
attached_assets/: 2_build_linux_1777521313209.txt  Pasted-Act-as-an-Expert-Flutter-UI-UX-Engineer-specializing-in_1777481175135.txt  Pasted-I-am-currently-unable-to-create-a-Google-Doc-directly-b_1777650957905.txt  overview_1777723404807.rtf
docs/: observability.md  plugin-api.md  runbooks.md  secrets-vault.md  voice-mode.md
ios/: Podfile
lib/: main.dart
linux/: CMakeLists.txt
native/: README.md
scripts/: post-merge.sh
test/: ai_api_config_test.dart  ai_command_service_streaming_test.dart  ai_command_service_test.dart  ai_provider_test.dart  api_key_storage_test.dart  app_lock_screen_test.dart  app_lock_storage_test.dart  app_prefs_storage_test.dart  backup_crypto_test.dart  backup_storage_test.dart  bundled_engine_test.dart  chat_history_storage_test.dart  chat_view_test.dart  cheatsheet_global_shortcut_test.dart  cloud_sync_engine_test.dart  cloud_sync_zero_trust_test.dart  command_analysis_test.dart  command_risk_assessor_test.dart  connection_status_test.dart  copilot_dock_breakpoint_test.dart  copilot_dock_test.dart  credential_template_test.dart  (+70 more)
(+214 files in other folders)
